# faml

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.zh_CN.md  build.rs  faml.sln  oml.sln  package.json
.github/workflows/: rust.yml
docs/: README.md
docs/.vuepress/: config.js
docs/en/: README.md
docs/en/guide/: 00_introduction.md  01_hello_world.md  02_structs_and_types.md  03_expressions.md  04_methods.md  05_advanced_usage.md
docs/guide/: 00_introduction.md  01_hello_world.md  02_structs_and_types.md  03_expressions.md  04_methods.md  05_advanced_usage.md
faml/: Cargo.toml  faml.pest
faml/src/: lib.rs  main.rs  native.rs  string_utils.rs  test.rs
faml/src/ast/: eval.rs  faml_expr.rs  faml_value.rs  invoke.rs  mod.rs
faml/src/expr/: eval.rs  faml_expr.rs  faml_value.rs  invoke.rs
faml/src/idl_gen/: mod.rs
famllib/: Cargo.toml  build.rs
famllib/include/faml/: faml.h  faml.hpp
famllib/src/: ffi.rs
famlsharp/: faml.csproj  ffi.cs  lib.cs
include/faml/: faml.hpp
src/: ffi.rs  lib.rs  test.rs
src/ast/: eval.rs  faml_expr.rs  faml_value.rs  mod.rs  oml_expr.rs  oml_value.rs
