[package]
name = "oml"
version = "0.1.2"
edition = "2021"
rust-version = "1.74"
license = "MIT"
repository = "https://github.com/fawdlstty/oml"
homepage = "https://github.com/fawdlstty/oml"
description = "Open Markup Language!"
keywords = ["oml", "markup", "configuration"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oml"
crate-type = ["staticlib", "dylib", "lib"]

[dependencies]
anyhow = "1.0.98"
pest = "2.7.11"
pest_derive = "2.7.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
cbindgen = "0.27.0"

[features]
default = []
