[package]
name = "faml"
version = "0.1.3"
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/fawdlstty/faml"
homepage = "https://github.com/fawdlstty/faml"
description = "Minimalist and powerful dynamic markup language"
keywords = ["faml", "markup", "configuration"]
categories = []

[lib]
name = "faml"
crate-type = ["rlib"] # , "cdylib", "staticlib"

[dependencies]
anyhow = "1.0.98"
pest = "2.7.11"
pest_derive = "2.7.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
default = []
